<resources>
    <string name="app_name">MEI Weather App</string>
    <string name="icon_do_estado_do_tempo">icon do estado do tempo</string>
    <string name="humidade">Humidade</string>
    <string name="vento">Vento</string>
    <string name="rajadas">Rajadas</string>
    <string name="raios_uv">Raios UV</string>
    <string name="precipita_o">Precipitação</string>
    <string name="press_o">Pressão</string>
    <string name="nuvens">Nuvens</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmar_password">Confirmar password</string>
    <string name="registar">Registar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">OK</string>
</resources>
