<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mei.weatherapp.Login"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login"
        android:id="@+id/lbl_title"
        android:gravity="center_horizontal"
        android:textColor="@color/textColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:id="@+id/textView5"
        android:textColor="@color/textColor"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/txt_username"
        android:textColor="@color/textColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/textView6"
        android:textColor="@color/textColor"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_password"
        android:textColor="@color/textColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/confirmar_password"
        android:id="@+id/lbl_password2"
        android:textColor="@color/textColor"
        android:visibility="gone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txt_passord2"
        android:visibility="gone"
        android:textColor="@color/textColor"/>

    <CheckBox
        android:text="Manter ligado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chk_manter"
        android:textColor="@color/textColor"
        app:buttonTint="@color/textColor"
        android:checked="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btn_login"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/registar"
            android:id="@+id/btn_registar"
            android:layout_weight="1"/>

        <Button
            android:text="Loggout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLoggout"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/btn_registar_cancelar"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:visibility="gone"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/btn_registar_ok"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
